--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,3 +1,1 @@
-#Config Telegram Bot
-tokenTelega: "5506307754:AAHzTQxzXdlzBzqho15rWEXREOSTQ_8-ALk"
-#Config DB
+TokenTelega: "5506307754:AAHzTQxzXdlzBzqho15rWEXREOSTQ_8-ALk"
